--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,20 @@ m4/lt~obsolete.m4
 missing
 mkinstalldirs
 stamp-h1
+
+config.guess.cdbs-orig
+config.sub.cdbs-orig
+debian/epiphany-extensions-jonny.debhelper.log
+debian/epiphany-extensions-jonny.substvars
+debian/epiphany-extensions-jonny/
+debian/files
+debian/stamp-autotools-files
+debian/stamp-makefile-build
+extensions/onlyoneclosebutton/egg/eggmarshalers.c
+extensions/onlyoneclosebutton/egg/eggmarshalers.h
+extensions/onlyoneclosebutton/egg/eggtypebuiltins.c
+extensions/onlyoneclosebutton/egg/eggtypebuiltins.h
+extensions/onlyoneclosebutton/egg/stamp-eggmarshalers.c
+extensions/onlyoneclosebutton/egg/stamp-eggmarshalers.h
+extensions/onlyoneclosebutton/egg/stamp-eggtypebuiltins.c
+extensions/onlyoneclosebutton/egg/stamp-eggtypebuiltins.h
